@@ -204,7 +204,7 @@ dect-concrete-paint=Painted concrete
 stone-walls=Basic walls
 dect-advanced-walls=Advanced walls
 dect-wood-floor=Wooden floorboards
-landfill=Earthworks
+dect-earthworks=Earthworks
 dect-lawnmower=Lawnmower
 dect-signs=Signs
 
@@ -214,7 +214,7 @@ dect-concrete-paint=Paint concrete surfaces for added decoration.
 stone-walls=Basic walls that protect your factory against attackers.
 dect-advanced-walls=Stronger than basic walls, they protect your factory against attackers.
 dect-wood-floor=Basic wooden flooring that covers the ground and allows you to move more quickly.
-landfill=Allows you to place and remove water tiles.
+dect-earthworks=Allows you to place and remove water tiles.
 dect-lawnmower=Removes decoratives from a given area, leaving a completely clear surface.
 dect-signs=Signs that help you to label your factory.
 
